[package]
name = "orca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "^4.4.0"
serde = { version = "^1.0.130", features = ["derive"] }
async-openai = "^0.14.1"
serde_json = "^1.0"
async-trait = "^0.1.62"
tokio = {version = "^1.32.0", features = ["full"]}
reqwest = "^0.11.14"
scraper = "^0.17.1"
pdf_text = { git = "https://github.com/pdf-rs/pdf_text" }
itertools = "^0.11.0"
pdf = { git = "https://github.com/pdf-rs/pdf" }
uuid = { version = "^1.1.2", features = ["v4"] }

[dev-dependencies]
base64 = "0.21.4"

