[package]
name = "models-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
tokenizers = "0.14.1"

# Wasm crates
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.0"
hf-hub = {version = "0.3.0", features = ["tokio"]}
serde_json = "1.0.108"
anyhow = "1.0.75"
serde = "1.0.191"

# [features]
# async = ["dep:hf-hub"]
