[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
tokenizers = "0.14.1"
hf-hub = {version = "0.3.0", features = ["tokio"]}
serde_json = "1.0.108"
anyhow = "1.0.75"
serde = "1.0.191"
tokio = "1.33.0"