[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
tokenizers = {version = "0.14.0", features = ["http"]}
hf-hub = {version = "0.3.0", features = ["tokio"], optional = true}
serde_json = "^1.0"
anyhow = "1.0.75"
serde = { version = "^1.0.130", features = ["derive"] }
tokio = {version = "1.33.0", optional = true}

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.0"

[features]
async = ["dep:tokio", "dep:hf-hub"]
