[package]
name = "orca-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
tokenizers = { version = "0.13.4", default-features = false, features = ["unstable_wasm"] }
serde_json = "1.0.99"
anyhow = "1"
serde = { version = "1.0.171", features = ["derive"] }

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.0"

# Optional dependencies (for async support).
tokio = {version = "1.33.0", optional = true}
hf-hub = {version = "0.3.0", features = ["tokio"], optional = true}

[features]
async = ["dep:tokio", "dep:hf-hub"]
