[package]
name = "orca"
description = "Orca is an LLM orchestration framework built in Rust"
homepage = "https://orca.scrippt.tech"
documentation = "https://docs.rs/orca"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/scrippt-tech/orca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "^4.4.0"
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0"
async-trait = "^0.1.62"
tokio = {version = "^1.32.0", features = ["full"]}
reqwest = { version = "^0.11.14", features = ["json"] }
scraper = "^0.17.1"
pdf_text = { git = "https://github.com/pdf-rs/pdf_text" }
itertools = "^0.11.0"
pdf = { git = "https://github.com/pdf-rs/pdf" }
uuid = { version = "^1.1.2", features = ["v4"] }
qdrant-client = "1.5.0"
anyhow = "1.0.75"
serial_test = "2.0.0"
rand = "0.8.5"
text-splitter = {version = "0.4.4", features = ["tokenizers", "tiktoken-rs"]}
tokenizers = {version = "0.14.0", features = ["http"]}
hf-hub = {version = "0.3.0", features = ["tokio"]}
candle-core = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
log = "0.4.20"
crossbeam-channel = "0.5.8"

[dev-dependencies]
base64 = "0.21.4"

