[package]
name = "chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orca = { path = "../../orca" }
anyhow = "1.0.75"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }