[package]
name = "pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orca = { path = "../../orca" }
anyhow = "1.0.75"
tokio = { version = "1.12.0", features = ["full"] }
clap = "4.4.7"
serde_json = "1.0.108"
env_logger = "0.10.0"
rayon = "1.8.0"
