[package]
name = "quantized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.33.0"
orca = { path = "../../orca-core", package = "orca-core"}
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
