[package]
name = "quantized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.40.0"
orca = { path = "../../orca-core", package = "orca-core"}
anyhow = "1.0.89"
log = "0.4.22"
env_logger = "0.11.5"
