[package]
name = "rag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orca = { path = "../../orca-core", package = "orca-core" }
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.17", features = ["derive"] }
serde_json = "1.0.128"
env_logger = "0.11.5"
rand = "0.8.5"
